cmake_minimum_required(VERSION 3.15)
project(C_programs C)

set(CMAKE_C_STANDARD 99)

add_executable(C_programs main.c 1_holaMundo.c
        2_tipos_de_datos.c
        3_entradas.c
        4_salidas.c
        5_secuencias_escape.c
        6_comentarios.c
        7_operadores_aritmeticos.c
        8_castings.cpp
        9_variables.c
        10_operadores_asignacion.c
        11_estructuras_de_decision.c
        12_operadores_logicos.c
        13_estructuras_de_eleccion.c
        14_operadores_incremento_decremento.c
        15_estructuras_de_repeticion.c
        16_funciones.c
        17_recursividad.c
        18_arreglos.c
        19_matrices.c
        20_punteros.c 21_punteros_y_arreglos.c 22_punteros_funciones.c 23_cadenas.c 24_cadenas_y_funciones.c 25_funciones_puntero.c 26_puntero_void.c 27_estructuras.c)